# videowatch

./: .dockerignore  .env.production.example  .env.sample  .gitignore  CLAUDE.md  LICENSE  README.md  compose.yaml  describeops-ecs  describeops-ecs.pub  ex-google-recruiter-explains-why-lying-gets-you-hired.md  idea.md  package-lock.json  package.json  playwright.config.ts  project-map.md  session-log.md  stack.md  tsconfig.base.json  vitest.config.ts  youtube_qwen_analyze.py
apps/desktop-companion/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-companion/src-tauri/capabilities/: default.json
apps/desktop-companion/src-tauri/src/: lib.rs  main.rs  protocol.rs  protocol_test.rs  registration.rs  storage.rs  tools.rs
backend/: .env.production.example  README.md  manage.py  pyproject.toml
backend/describeops_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/reader/: admin.py  api.py  apps.py  middleware.py  models.py  schemas.py  storage_backends.py
backend/reader/management/commands/: analyze_local_video_backend.py  analyze_youtube_backend.py  pipeline_smoke.py  qwen_smoke.py  runworker.py
backend/reader/migrations/: 0001_initial.py  0002_alter_videosession_source_url.py  0003_generatedartifact.py  0004_pipeline_state_and_artifact_constraint.py  0005_add_performance_indexes.py  0006_processingjob.py  0007_processingjob_canceled_status.py  0008_accounts_and_session_owner.py  0009_canonical_video_and_stored_assets.py
backend/reader/services/: agents.py  archive.py  artifact_builder.py  artifacts.py  audio.py  events.py  export.py  jobs.py  media_ingest.py  qwen.py  storage.py  timecode.py  transcript.py
backend/tests/: conftest.py  test_agent_society.py  test_api_contract.py  test_artifacts.py  test_settings.py  test_template_modes.py  test_timecode.py
services/agent-core/: README.md  pyproject.toml
services/agent-core/src/describeops_agent_core/: __init__.py  runtime.py  schemas.py  society.py
services/agent-core/tests/: test_agent_society.py
services/api/: Dockerfile  README.md  pyproject.toml
services/api/src/describeops_api/: __init__.py  chunking.py  config.py  evidence.py  gateway.py  main.py  media.py  media_analysis.py  schemas.py  (+2 more)
services/api/tests/: test_api_contract.py  test_config.py  test_evidence_pipeline.py  test_media_analysis.py  test_qwen_gateway.py
(+126 files in other folders)
