[project]
name = "describeops-backend"
version = "0.1.0"
description = "Django Ninja backend for context-preserving video-to-document reading."
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<6",
    "django-ninja>=1.4,<2",
    "openai>=2.0,<3",
    "pillow>=11.0,<12",
    "python-dotenv>=1.0,<2",
    "yt-dlp>=2025.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-django>=4.10,<5",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "describeops_backend.settings"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
