[project]
name = "describeops-api"
version = "0.1.0"
description = "FastAPI backend and Qwen Cloud gateway for DescribeOps."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0"
]

[dependency-groups]
dev = [
  "pytest>=8.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
