[package]
name = "describeops_companion"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
default-run = "describeops-companion"

[lib]
name = "describeops_companion"
path = "src/lib.rs"

[[bin]]
name = "describeops-native-host"
path = "src/bin/native_host.rs"

[[bin]]
name = "describeops-companion"
path = "src/main.rs"
required-features = ["tauri-app"]

[dependencies]
dirs = "6"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [], optional = true }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[features]
default = []
tauri-app = ["dep:tauri"]
